typescript/checker/tests/conformance/expressions/assignmentOperator/assignmentLHSIsReference.ts.stderr
error: ShouldIncludeUndefinedType {
    span: Span {
        lo: BytePos(
            60,
        ),
        hi: BytePos(
            62,
        ),
        ctxt: #0,
    },
}
 --> $DIR/tests/conformance/expressions/assignmentOperator/assignmentLHSIsReference.ts:4:5
  |
4 | var x1: number;
  |     ^^

error: ShouldIncludeUndefinedType {
    span: Span {
        lo: BytePos(
            156,
        ),
        hi: BytePos(
            158,
        ),
        ctxt: #0,
    },
}
  --> $DIR/tests/conformance/expressions/assignmentOperator/assignmentLHSIsReference.ts:12:5
   |
12 | var x3: { a: string  };
   |     ^^

